--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -4,13 +4,11 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ categories ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
 
     runs-on: windows-latest
 
@@ -20,7 +18,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/ op
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -28,3 +28,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@4.0.0
+      with:
+        branch: gh-pages #The branch the action should deploy to.
+        folder: build #The folder the action should deploy.
+
+
