--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -10,25 +10,17 @@ jobs:
 
     runs-on: windows-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/ op
-
     steps:
     - name: Checkout
     - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+    - name: Install and Build
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
 
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.0.0
+    - uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
         branch: gh-pages #The branch the action should deploy to.
         folder: build #The folder the action should deploy.
