--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -18,9 +18,11 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
 
-      - uses: JamesIves/github-pages-deploy-action@4.0.0
+      - uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          branch: gh-pages #The branch the action should deploy to.
-          folder: ../build #The folder the action should deploy.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: ./build # The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
 
 
