--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -18,8 +18,7 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
 
-      - run: |
-          apt-get update && apt-get install -y rsync
+      - run: npm install rsync
 
       - uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
