--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -6,7 +6,7 @@ name: Node.js CI
 on: 
   push: 
    branches: 
-    - main
+    - categories
 
 jobs:
   build-and-deploy:
@@ -17,14 +17,5 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-
-      - run: npm install rsync
-
-      - uses: JamesIves/github-pages-deploy-action@3.6.2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build # The folder the action should deploy.
-          CLEAN: true # Automatically remove deleted files from the deploy branch
 
 
