--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -17,6 +17,11 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      - run: npm run deploy
+      - name: Deploy
+        run: |
+          git config --global user.name ${{secrets.USER_NAME}}
+          git config --global user.email ${{secrets.USER_EMAIL}}
+          git remote set-url origin https://github.com/${{secrets.USER_NAME}}/photo-gallery.git
+          npm run deploy
 
 
