--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git config --global user.name ${{secrets.USER_NAME}}
           git config --global user.email ${{secrets.USER_EMAIL}}
-          git remote set-url origin https://github.com/${{secrets.USER_NAME}}/photo-gallery.git
+          git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USER_NAME}}/photo-gallery
           npm run deploy
 
 
