--- a/.github/workflows/photo-gallery.yml
+++ b/.github/workflows/photo-gallery.yml
@@ -18,10 +18,10 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
       - name: Deploy
-        run: |
-          git config --global user.name ${{secrets.USER_NAME}}
-          git config --global user.email ${{secrets.USER_EMAIL}}
-          git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USER_NAME}}/photo-gallery
-          npm run deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          publish_dir: 
+          
 
 
