--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
+  "homepage": "http://lindiek.github.io/photo-gallery",
   "name": "photo-gallery",
-  "version": "1.0.0",
-  "description": "gallery that uses unsplash api, allowing uses to like pictures and make collections",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LindieK/photo-gallery.git"
-  },
-  "keywords": [
-    "unsplash",
-    "photo-gallery",
-    "react"
-  ],
-  "author": "Linda Okorie",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LindieK/photo-gallery/issues"
-  },
-  "homepage": "https://github.com/LindieK/photo-gallery#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.12.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-lazyload": "^3.1.0",
+    "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "predeploy": " npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "enzyme": "^3.11.0",
+    "gh-pages": "^3.1.0"
   }
 }
