--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://lindiek.github.io/photo-gallery",
   "name": "photo-gallery",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-lazyload": "^3.1.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.43.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
