--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lazyload": "^3.1.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.1",
     "sass": "^1.43.4",
     "styled-components": "^5.2.1",
