--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "firebase": "^9.1.3",
     "react": "^17.0.1",
+    "react-avatar": "^4.0.0",
     "react-dom": "^17.0.1",
     "react-lazyload": "^3.1.0",
     "react-router-dom": "^6.0.2",
