--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "firebase": "^9.8.4",
     "react": "^17.0.2",
@@ -48,8 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "enzyme": "^3.11.0"
-  }
+  "devDependencies": {}
 }
