--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.8.4",
     "react": "^17.0.1",
     "react-avatar": "^4.0.0",
