--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.8.4",
     "react": "^17.0.1",
     "react-avatar": "^4.0.0",
