--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.1",
+    "react-toastify": "^8.2.0",
     "sass": "^1.43.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
