--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "react": "^17.0.1",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.1",
-    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.43.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
